force-app/main/default/objects/ParentObjectUpdate__mdt/ParentObjectUpdate__mdt.object-meta.xml
<CustomObject>
    <label>Parent object update</label>
    <pluralLabel>Parent object updates</pluralLabel>
</CustomObject>