force-app/main/default/objects/ParentObjectUpdate__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has changed</fullName>
                <default>true</default>
                <label>Has changed</label>
            </value>
            <value>
                <fullName>Equals true</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>