force-app/main/default/objects/ParentObjectUpdate__mdt/fields/ConditionField__c.field-meta.xml
<CustomField>
    <fullName>ConditionField__c</fullName>
    <label>ConditionField</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipName>UpdateParentObjects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>