force-app/main/default/objects/ParentObjectUpdate__mdt/fields/Insert__c.field-meta.xml
<CustomField>
    <fullName>Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert</label>
    <type>Checkbox</type>
</CustomField>