force-app/main/default/objects/ParentObjectUpdate__mdt/fields/RelationField__c.field-meta.xml
<CustomField>
    <fullName>RelationField__c</fullName>
    <label>RelationField</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipName>UpdateParentObjects2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>