force-app/main/default/objects/ParentObjectUpdate__mdt/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>TextArea</type>
</CustomField>