force-app/main/default/objects/ParentObjectUpdate__mdt/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <label>SourceField</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipName>UpdateParentObjects3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>