force-app/main/default/objects/ParentObjectUpdate__mdt/fields/SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SourceObject__c</fullName>
    <label>SourceObject</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipName>UpdateParentObjects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>