force-app/main/default/objects/ParentObjectUpdate__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>TargetField</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipName>UpdateParentObjects1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>