force-app/main/default/objects/ParentObjectUpdate__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>TargetObject</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipName>UpdateParentObjects1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>